--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ a {
     
 }
 
+.todo-item-marked {
+  background-color: darkgreen;
+}
+
 .todo-app-container {
     display: flex;
     justify-content: space-between;
