--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,35 +20,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+@font-face {
+  font-family: 'Roboto';
+  src: url(fonts/Roboto-Light.ttf) format('truetype');
+  font-style: normal;
+  font-weight: 100;
 }
 
-.todo-item-list {
-    
-}
-
-.todo-item-marked {
-  background-color: darkgreen;
-}
-
-.todo-app-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.todo-item-delete {
-    height: 100%;
-    margin-left: 30px
-}
-
-.todo-item-mark {
-    height: 100%;
-}
-
-.todo-item {
-    display: flex;
-    text-align: left;
+* {
+  font-family: "Roboto";
+  font-weight: 100;
 }
